--- a/EarthNews/View/Cell/ArticleTableViewCell.xib
+++ b/EarthNews/View/Cell/ArticleTableViewCell.xib
@@ -17,29 +17,41 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="AYE-Ox-5Eo">
-                        <rect key="frame" x="5" y="10" width="300" height="150"/>
+                        <rect key="frame" x="5" y="10" width="384" height="150"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2e2-bh-mo8" userLabel="DatabaseIcon">
-                                <rect key="frame" x="0.0" y="0.0" width="84" height="150"/>
+                                <rect key="frame" x="0.0" y="0.0" width="30" height="150"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LtA-69-0ap">
-                                        <rect key="frame" x="8.5" y="0.0" width="67" height="31"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LtA-69-0ap">
+                                        <rect key="frame" x="0.0" y="20" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="NZy-fm-Fw3"/>
+                                            <constraint firstAttribute="height" constant="30" id="QqY-Rd-euQ"/>
+                                        </constraints>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain"/>
+                                        <connections>
+                                            <action selector="databaseIconTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Udf-iS-eab"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ldB-Yp-1oK">
-                                        <rect key="frame" x="17" y="31" width="50" height="119"/>
+                                        <rect key="frame" x="0.0" y="50" width="30" height="100"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="LtA-69-0ap" secondAttribute="trailing" id="Rh0-4P-4Fj"/>
+                                    <constraint firstItem="LtA-69-0ap" firstAttribute="leading" secondItem="2e2-bh-mo8" secondAttribute="leading" id="XO4-YL-QO4"/>
+                                    <constraint firstItem="LtA-69-0ap" firstAttribute="top" secondItem="2e2-bh-mo8" secondAttribute="top" constant="20" id="m4e-W6-aq8"/>
+                                </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="qsS-JP-Jje" userLabel="Body">
-                                <rect key="frame" x="87" y="0.0" width="60" height="150"/>
+                                <rect key="frame" x="33" y="0.0" width="198" height="150"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" horizontalCompressionResistancePriority="751" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bn-kr-D9x" userLabel="DateLabel">
-                                        <rect key="frame" x="0.0" y="5" width="60" height="12"/>
+                                        <rect key="frame" x="0.0" y="5" width="198" height="12"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="12" id="fwD-aw-UwD"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="30" id="y5h-MM-MBO"/>
@@ -49,7 +61,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Jib-oJ-mzG" userLabel="TitleLabel">
-                                        <rect key="frame" x="0.0" y="22" width="60" height="20"/>
+                                        <rect key="frame" x="0.0" y="22" width="198" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="30" id="5mG-8O-gPO"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="ILf-hb-b43"/>
@@ -59,7 +71,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hbd-Dv-egq" userLabel="SubtitleLabel">
-                                        <rect key="frame" x="0.0" y="47" width="60" height="14"/>
+                                        <rect key="frame" x="0.0" y="47" width="198" height="14"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="30" id="agX-wU-aCn"/>
                                             <constraint firstAttribute="height" relation="lessThanOrEqual" priority="999" constant="50" id="ccr-oO-PFt"/>
@@ -69,7 +81,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="source" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmk-Bx-cod" userLabel="SourceLabel">
-                                        <rect key="frame" x="0.0" y="133" width="60" height="12"/>
+                                        <rect key="frame" x="0.0" y="133" width="198" height="12"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="12" id="CMj-QZ-1DV"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="30" id="tTI-VI-a5G"/>
@@ -84,19 +96,18 @@
                                     <constraint firstItem="qmk-Bx-cod" firstAttribute="leading" secondItem="qsS-JP-Jje" secondAttribute="leading" id="IG6-ye-X7V"/>
                                     <constraint firstItem="Hbd-Dv-egq" firstAttribute="leading" secondItem="qsS-JP-Jje" secondAttribute="leading" id="Izf-aE-WYU"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" priority="999" constant="230" id="MBR-Sa-upw"/>
+                                    <constraint firstItem="Hbd-Dv-egq" firstAttribute="top" secondItem="Jib-oJ-mzG" secondAttribute="bottom" constant="5" id="NaJ-ec-70R"/>
                                     <constraint firstItem="5Bn-kr-D9x" firstAttribute="leading" secondItem="qsS-JP-Jje" secondAttribute="leading" id="RAh-Pn-3ip"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="bEF-sX-idF"/>
                                     <constraint firstItem="5Bn-kr-D9x" firstAttribute="top" secondItem="qsS-JP-Jje" secondAttribute="top" constant="5" id="eQw-gJ-jiy"/>
-                                    <constraint firstItem="Hbd-Dv-egq" firstAttribute="top" secondItem="Jib-oJ-mzG" secondAttribute="bottom" constant="5" id="f4a-hD-EuA"/>
                                     <constraint firstItem="Jib-oJ-mzG" firstAttribute="leading" secondItem="qsS-JP-Jje" secondAttribute="leading" id="hiC-HX-lz3"/>
                                     <constraint firstItem="qmk-Bx-cod" firstAttribute="top" secondItem="Hbd-Dv-egq" secondAttribute="bottom" constant="5" id="mLY-3z-FTc"/>
                                     <constraint firstAttribute="height" constant="150" id="noC-kd-kzT"/>
-                                    <constraint firstItem="Hbd-Dv-egq" firstAttribute="top" secondItem="Jib-oJ-mzG" secondAttribute="bottom" constant="5" id="pSz-xM-Ysz"/>
                                     <constraint firstAttribute="bottom" secondItem="qmk-Bx-cod" secondAttribute="bottom" constant="5" id="poU-7I-a4w"/>
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GA0-zd-Krh">
-                                <rect key="frame" x="150" y="0.0" width="150" height="150"/>
+                                <rect key="frame" x="234" y="0.0" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="GbO-o1-MVp"/>
                                     <constraint firstAttribute="height" constant="150" id="cnP-DH-m92"/>
@@ -109,12 +120,15 @@
                             <constraint firstItem="2e2-bh-mo8" firstAttribute="top" secondItem="AYE-Ox-5Eo" secondAttribute="top" id="5LC-sY-z4L"/>
                             <constraint firstItem="qsS-JP-Jje" firstAttribute="leading" secondItem="2e2-bh-mo8" secondAttribute="trailing" constant="3" id="5MJ-Qf-9Ws"/>
                             <constraint firstItem="2e2-bh-mo8" firstAttribute="leading" secondItem="AYE-Ox-5Eo" secondAttribute="leading" id="7gw-iA-cSU"/>
+                            <constraint firstAttribute="bottom" secondItem="2e2-bh-mo8" secondAttribute="bottom" id="HUI-wZ-UVa"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="MPg-pr-UR7"/>
+                            <constraint firstItem="qsS-JP-Jje" firstAttribute="leading" secondItem="2e2-bh-mo8" secondAttribute="trailing" constant="3" id="MoT-nI-upb"/>
                             <constraint firstItem="GA0-zd-Krh" firstAttribute="top" secondItem="AYE-Ox-5Eo" secondAttribute="top" id="XWE-Ua-bt0"/>
                             <constraint firstItem="qsS-JP-Jje" firstAttribute="leading" secondItem="2e2-bh-mo8" secondAttribute="trailing" constant="3" id="o1N-LN-VfW"/>
-                            <constraint firstItem="GA0-zd-Krh" firstAttribute="leading" secondItem="qsS-JP-Jje" secondAttribute="trailing" constant="3" id="rZ6-os-ZKY"/>
                             <constraint firstAttribute="bottom" secondItem="GA0-zd-Krh" secondAttribute="bottom" id="ra7-r6-JdD"/>
                             <constraint firstItem="qsS-JP-Jje" firstAttribute="top" secondItem="AYE-Ox-5Eo" secondAttribute="top" id="t4p-TQ-sRY"/>
+                            <constraint firstItem="2e2-bh-mo8" firstAttribute="top" secondItem="AYE-Ox-5Eo" secondAttribute="top" id="tSe-O3-r0L"/>
+                            <constraint firstItem="2e2-bh-mo8" firstAttribute="leading" secondItem="AYE-Ox-5Eo" secondAttribute="leading" id="xac-Hg-92u"/>
                             <constraint firstAttribute="trailing" secondItem="GA0-zd-Krh" secondAttribute="trailing" id="zhY-fZ-vFu"/>
                         </constraints>
                     </stackView>
@@ -122,11 +136,13 @@
                 <constraints>
                     <constraint firstItem="AYE-Ox-5Eo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="3d0-qp-fNu"/>
                     <constraint firstItem="AYE-Ox-5Eo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="B3N-rL-BJ1"/>
+                    <constraint firstAttribute="trailing" secondItem="AYE-Ox-5Eo" secondAttribute="trailing" constant="10" id="ftg-J8-RXa"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="cellImageView" destination="GA0-zd-Krh" id="G7R-v9-Uto"/>
+                <outlet property="databaseActionIcon" destination="LtA-69-0ap" id="KCc-P6-J5G"/>
                 <outlet property="date" destination="5Bn-kr-D9x" id="1vh-Fy-znK"/>
                 <outlet property="imageView" destination="GA0-zd-Krh" id="clS-7I-lpG"/>
                 <outlet property="source" destination="qmk-Bx-cod" id="C6m-BS-Zeh"/>
